@@ -1,3 +1,10 @@
+2008-07-12  Stefan Sobernig  <stefan.sobernig@wu-wien.ac.at>
+
+	* tcl/xorb-datatypes-procs.tcl: Another 1.6 compat fix. Need to
+	add a -closure flag around a superclass introspection instruction
+	to have the anything resolution operative again (in particular
+	cases).
+
 2008-07-09  Stefan Sobernig  <stefan.sobernig@wu-wien.ac.at>
 
 	* tcl/xorb-context-procs.tcl (InvocationInformationType): Adding
